# equirectangular-panorama-viewer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TESTING.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/pano-viewer/: Cargo.toml
crates/pano-viewer/src/: app.rs  loader.rs  main.rs  ui.rs  window.rs
crates/pano-viewer/src/scene/: texture.rs
crates/vr-show/: Cargo.toml
crates/vr-show/src/: app.rs  error.rs  file.rs  main.rs  ui.rs  window.rs
docs/superpowers/plans/: 2026-07-07-surface-max-clamp.md
docs/superpowers/specs/: 2026-06-25-desktop-package-design.md  2026-07-07-surface-max-clamp-design.md
src/: errorBanner.js  hud.js
src-tauri/: Cargo.toml  tauri.conf.json
tests/: errorBanner.test.js
